made changes to fixtures/users.yml, fixtures/candies.yml, b/c they had old data. Hoping this fixes migration problems.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,15 +3,15 @@
 one:
   name: MyString
   password_digest: MyString
-  employee: 
-  default: MyString
-  'false': MyString
+  employee: false
   cash: 1
+  appetite: 1
+  taste: 1
 
 two:
   name: MyString
   password_digest: MyString
-  employee: 
-  default: MyString
-  'false': MyString
+  employee: false
   cash: 1
+  appetite: 1
+  taste: 1
