--- a/test/fixtures/candies.yml
+++ b/test/fixtures/candies.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: 
-  taste: 
+  name: MyString
+  taste: MyString
   cost: 1
+  appetite: 1
 
 two:
-  name: 
-  taste: 
+  name: MyString
+  taste: MyString
   cost: 1
+  appetite: 1
